--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -613,6 +613,9 @@ Maximum power of 4260 W/cm$^3$ at 1.43 s
 Partition times: 0, 1.36, 1.5, 3.0 s\\
 Partition ranks: 10, 13, 20
 
+All DMD analysis performed using {\tt PyDMD}.  \\
+Total time required is about 0.02 s.
+
 \end{frame}
 
 
@@ -626,9 +629,25 @@ Partition ranks: 10, 13, 20
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
+\frametitle{DMD Analysis -- Power Profile for $t = 0$}
+
+\includegraphics[scale=0.30]{meshpower_0_abs.pdf}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
 \frametitle{DMD Analysis -- Power Profile for $t = 1.43$}
 
 \includegraphics[scale=0.3]{meshpower_1.pdf}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{DMD Analysis -- Power Profile for $t = 1.43$}
+
+\includegraphics[scale=0.3]{meshpower_1_abs.pdf}
 
 \end{frame}
 
@@ -642,6 +661,14 @@ Partition ranks: 10, 13, 20
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
+\frametitle{DMD Analysis -- Power Profile for $t = 2$}
+
+\includegraphics[scale=0.3]{meshpower_2_abs.pdf}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
 \frametitle{DMD Analysis -- Power Profile for $t = 3$}
 
 \includegraphics[scale=0.3]{meshpower_3.pdf}
@@ -650,250 +677,150 @@ Partition ranks: 10, 13, 20
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Whence the Dominant Error?}
+\frametitle{DMD Analysis -- Power Profile for $t = 3$}
 
-\includegraphics[scale=0.3]{meshpower_3.pdf}
+\includegraphics[scale=0.3]{meshpower_3_abs.pdf}
  
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item The surrogate is so fragile
- \item Highly sensitive to rank perturbations
- \item ranks = 9, 13, 20 respectively
-\end{itemize}
+\frametitle{Interim Remark}
 
-\begin{figure}[ht]
+The results indicate DMD can capture rapid transients reasonably
+well with relatively small ranks.
 
-\includegraphics[scale=0.3]{corepower_ranks91320_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
+\vfill
+\pause
+
+The method {\it may} suffer from huge numerical challenges.  Consider the
+eigenvalues, amplitudes, and intermediate values for the first partition at $t = 1.35$.
+
+\vfill 
+
 \end{frame}
 
 \begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 8, 13, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks81320_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 5, 13, 20 respectively
-\end{itemize}
-
-\begin{figure}[ht]
-
-\includegraphics[scale=0.3]{corepower_ranks51320_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 11, 13, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks111320_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 12, 13, 20 respectively
-\end{itemize}
-
-\begin{figure}[ht]
-
-\includegraphics[scale=0.3]{corepower_ranks121320_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 14, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101420_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 15, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101520_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 12, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101220_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 10, 20 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101020_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 13, 25 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101325_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 13, 40 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101340_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 13, 100 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks1013100_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Ranks perturbation}
-\begin{itemize}
- \item ranks = 10, 13, 150 respectively
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks1013150_t136150299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Time window perturbation}
-\begin{itemize}
- \item windows : 1.20, 1.56, 3.00 sec
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101320_t120156299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Time window perturbation}
-\begin{itemize}
- \item windows : 1.20, 1.40, 3.00 sec
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101320_t120140299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Sensitivity Study: Time window perturbation}
-\begin{itemize}
- \item windows : 1.30, 2.00, 3.00 sec
-\end{itemize}
-\begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101320_t130200299.pdf}
-\caption{Partitioned DMD surrogates}
-\end{figure}
-\end{frame}
-
-
-
-   \begin{frame}
-   \section{Conclusion and Future Work }
-   \frametitle{Conclusion}
-   \begin{itemize}
-   \item Partitioned DMD surrogate was able to represent the spatio-temporal dynamics of the LRA benchmark.
-   \item The benchmark exhibits a rapid severe change in dynamics within a very short time scale.
-   \item The surrogate offered a precision of $10^{-8}\%$ in the maximum power region, and a maximum error of 10\% at the very beginning of the simulation. The surrogate was shown to be sensitive to the time partitioning. 
-   \item Work is ongoing to mitigate this sensitivity and to provide an automated way to select the number of partitions and their boundaries.
-   \end{itemize}
-      \end{frame}
-
-
-%     \section{}
-% %   \section{References}    
-%     \begin{frame}[t,allowframebreaks]\label{lastframe}
-%         \frametitle{bibliography}
-%           \nocite{*}
-%         \bibliographystyle{ans}
-%         % make a bibliography.bib file with your references in it
-%         \bibliography{bibliography}
-%     \end{frame}
-    
-\beginbackup
-\begin{frame}{Backup Slides}
-\begin{table}[bt]\begin{tabular}{|c|c|} \hline\textbf{POD}& \textbf{DMD}   \\ \hline 
-\onslide<1->{\textcolor{green}{Optimality and Orthogonality}}& \onslide<1->{\textcolor{red}{Non-orthogonal}} \\
-\onslide<2->{\textcolor{green}{Equations can be injected}}& \onslide<2->{\textcolor{red}{Solely Data-driven}}   \\
-\onslide<3->{\textcolor{orange}{Only linear correlations}}& \onslide<3->{\textcolor{green}{captures nonlinearities (Koopman)}}\\
-\onslide<4->{\textcolor{red}{Mixed temporal behaviors}}& 
-\onslide<4->{\textcolor{green}{explicit temporal frequencies}}\\ 
-\onslide<5->$\mathbf{C}=\frac{1}{M}\int_{0}^{\tau} \vec{\phi}(\vec{r},t)\vec{\phi}(\vec{r},t)^T dt$&
-\onslide<5-> \\
-\onslide<6->{\textcolor{green}{as rank $\uparrow$ error $\downarrow$}}&
-\onslide<6->{\textcolor{red}{Optimal rank is a challenge}}\\ \onslide<7->{\textcolor{red}{Modes ordered (energy/variance)}}&
-\onslide<7->{\textcolor{orange}{numerous variants/criteria}}\\ 
+\frametitle{Numerically Fragile?}
+ 
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+ $\lambda_i$ & $\omega_i$ & $e^{1.35 \omega_i}$ & $b_i$ & $b_i e^{1.35 \omega_i}$ \\
+\hline
+ 9.561  & 225.767 & 1.1e+98 & 8.2e-132 & 9.1e-34  \\
+ 5.574  & 171.803 & 4.1e+74 & 2.7e-99 & 1.1e-24  \\
+ 3.257  & 118.074 & 1.9e+51 & -2.0e-66 & -3.8e-15  \\
+ 2.364  & 86.042 & 2.3e+37 & 1.6e-47 & 3.8e-10  \\
+ 1.800  & 58.779 & 3.4e+25 & 3.8e-32 & 1.3e-06  \\
+ 1.403  & 33.850 & 5.0e+14 & -7.0e-19 & -3.5e-04  \\
+ 1.130  & 12.245 & 2.1e+05 & -2.9e-08 & -6.1e-03  \\
+ 0.996  & -0.352 & 7.0e-01 & -1.2e-03 & -8.6e-04  \\
+ 1.000  & -0.018 & 9.8e-01 & 1.1e-03 & 1.1e-03  \\
+ 1.015  & 1.446 & 4.2e+00 & -9.1e-04 & -3.8e-03  \\
 \hline
 \end{tabular}
-\end{table}
+
+{\small
+(where, e.g., 1.6e-47 means $1.6\times 10^{-47}$)}
+ 
 \end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Sensitivity to Partition Parameters}
+
+The ad-hoc approach appeared to be very sensitive to choices made, but how sensitive.  Perturb:
+\begin{itemize}
+ \item ranks in a given partition
+ \item window of a partition
+\end{itemize}
+\vfill
+\includegraphics[scale=0.35]{corepower.pdf}
+
+\end{frame}
+
+% \begin{frame}
+% \frametitle{Sensitivity Study: Ranks perturbation}
+% \begin{itemize}
+%  \item ranks = 8, 13, 20 respectively
+% \end{itemize}
+% \begin{figure}[ht]
+% \includegraphics[scale=0.3]{corepower_ranks81320_t136150299.pdf}
+% \caption{Partitioned DMD surrogates}
+% \end{figure}
+% \end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{From 10/13/20 to 5/13/20}
+
+\includegraphics[scale=0.25]{corepower.pdf}
+
+\includegraphics[scale=0.25]{corepower_ranks51320_t136150299.pdf}
+
+\end{frame}
+
+
 
 \begin{frame}
-\frametitle{DMD UQ}
-\begin{block}{Sandwich Rule}
-\centering
-$$\vec{x}^{DMD}(t)=\underbrace{\boldsymbol{\Phi}^{DMD}\mathbf{diag}(e^{\vec{\omega}t})\boldsymbol{\Phi}^{DMD\dagger}}_{\mathbf{S}}\vec{x_0}$$
-$$\mathbf{C}_x^{DMD}=\mathbf{S}\mathbf{C}_{0}\mathbf{S}^T,$$
-$$\mathbf{C}_{0}=\frac{1}{N-1}\mathbf{X_0}\mathbf{X_0}^T$$
-\end{block}
+\frametitle{From 10/13/20 to 10/12/20}
+ 
+\includegraphics[scale=0.25]{corepower.pdf}
+
+\includegraphics[scale=0.25]{corepower_ranks101220_t136150299.pdf}
+ 
 \end{frame}
 
 
-\backupend
+\begin{frame}
+\frametitle{From 10/13/20 to 10/13/100}
+
+\includegraphics[scale=0.25]{corepower.pdf}
+
+\includegraphics[scale=0.25]{corepower_ranks1013100_t136150299.pdf}
+
+\end{frame}
+
+ 
+
+\begin{frame}
+\frametitle{From 1.36 and 1.56 to 1.2 and 1.56 }
+
+\includegraphics[scale=0.25]{corepower.pdf}
+
+\includegraphics[scale=0.25]{corepower_ranks101320_t120156299.pdf}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{From 1.36 and 1.56 to 1.3 and 2.0 }
+
+\includegraphics[scale=0.25]{corepower.pdf}
+
+\includegraphics[scale=0.25]{corepower_ranks101320_t130200299.pdf}
+
+\end{frame}
+
+\section{Conclusion and Future Work}
+
+\begin{frame}
+
+   \frametitle{Conclusion}
+   
+   {\bf Recap}: used DMD on separate time intervals to reproduce mesh powers (in many cases to within 10\%) of the LRA transient. 
+   \vfill 
+   \pause
+   {\bf Takeaway}: as implemented, results are {\it very} sensitive to choice of DMD parameters.
+   \vfill
+   \pause 
+   {\bf Next steps}: craft selection techniques, find ways to improve numerical conditions, and consider DMD-Galerkin techniques.
+   \vfill 
+   \pause
+   {\bf Acknowledgement}: NRC Faculty Development Grant
+   \vfill
+ \end{frame}
 
 \end{document}
