Last tweaks made for meeting slides

--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -628,12 +628,12 @@ Total time required is about 0.02 s.
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{DMD Analysis -- Power Profile for $t = 0$}
-
-\includegraphics[scale=0.30]{meshpower_0_abs.pdf}
-
-\end{frame}
+% \begin{frame}
+% \frametitle{DMD Analysis -- Power Profile for $t = 0$}
+% 
+% \includegraphics[scale=0.30]{meshpower_0_abs.pdf}
+% 
+% \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
@@ -644,12 +644,12 @@ Total time required is about 0.02 s.
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{DMD Analysis -- Power Profile for $t = 1.43$}
-
-\includegraphics[scale=0.3]{meshpower_1_abs.pdf}
-
-\end{frame}
+% \begin{frame}
+% \frametitle{DMD Analysis -- Power Profile for $t = 1.43$}
+% 
+% \includegraphics[scale=0.3]{meshpower_1_abs.pdf}
+% 
+% \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
@@ -660,12 +660,12 @@ Total time required is about 0.02 s.
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{DMD Analysis -- Power Profile for $t = 2$}
-
-\includegraphics[scale=0.3]{meshpower_2_abs.pdf}
-
-\end{frame}
+% \begin{frame}
+% \frametitle{DMD Analysis -- Power Profile for $t = 2$}
+% 
+% \includegraphics[scale=0.3]{meshpower_2_abs.pdf}
+% 
+% \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
@@ -676,12 +676,12 @@ Total time required is about 0.02 s.
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{DMD Analysis -- Power Profile for $t = 3$}
-
-\includegraphics[scale=0.3]{meshpower_3_abs.pdf}
- 
-\end{frame}
+% \begin{frame}
+% \frametitle{DMD Analysis -- Power Profile for $t = 3$}
+% 
+% \includegraphics[scale=0.3]{meshpower_3_abs.pdf}
+%  
+% \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
